force-app/main/default/objects/SCOC__SubscriberIdList__c/SCOC__SubscriberIdList__c.object-meta.xml
<CustomObject>
    <description>Subscriber Id</description>
    <label>Subscriber Id List</label>
    <nameField>
        <displayFormat>SIL-{00000}</displayFormat>
        <label>Subscriber Id List Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriber Id Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>