force-app/main/default/objects/SCOC__SubscriberIdList__c/fields/SCOC__Address2__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Address2__c</fullName>
    <description>Address 2</description>
    <label>Address 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>