force-app/main/default/objects/SCOC__SubscriberIdList__c/fields/SCOC__Address3__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Address3__c</fullName>
    <description>Address 3</description>
    <label>Address 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>