force-app/main/default/objects/SCOC__SubscriberIdList__c/fields/SCOC__Address5__c.field-meta.xml
<CustomField>
    <fullName>SCOC__Address5__c</fullName>
    <description>Address 5</description>
    <label>Address 5</label>
    <length>100</length>
    <type>Text</type>
</CustomField>