force-app/main/default/objects/SCOC__SubscriberIdList__c/fields/SCOC__CreditBureauResponse__c.field-meta.xml
<CustomField>
    <fullName>SCOC__CreditBureauResponse__c</fullName>
    <description>This required master-detail field contains the lookup key to the associated Credit Burearu Response.</description>
    <label>Credit Bureau Response</label>
    <referenceTo>SCOC__CreditBureauResponse__c</referenceTo>
    <relationshipLabel>Credit Bureau Response Subscriber Ids</relationshipLabel>
    <relationshipName>SubscriberIdList</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>