force-app/main/default/objects/SCOC__SubscriberIdList__c/fields/SCOC__SubscriberName__c.field-meta.xml
<CustomField>
    <fullName>SCOC__SubscriberName__c</fullName>
    <description>Subscriber Name.</description>
    <label>Subscriber Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>