force-app/main/default/objects/SCOC__SubscriberIdList__c/fields/SCOC__SubscriberNumber__c.field-meta.xml
<CustomField>
    <fullName>SCOC__SubscriberNumber__c</fullName>
    <description>Subscriber number</description>
    <label>Subscriber Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>